--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 
 <html>
 <head>
-
-<script type="text/javascript" src="jquery-2.1.0.js"></script>
-
-<script type="text/javascript" src="Chart.js"></script>
-<script type="text/javascript" src="main.js"></script>
-
-<link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
 <div id="orange"></div>
 <h1>hack</h1>
+<canvas id="myChart" width="800" height="400"></canvas>
+
+
+
+<script type="text/javascript" src="jquery-2.1.0.js"></script>
+<script type="text/javascript" src="Chart.js"></script>
+<script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
