ankur sir and my group mates i changed in main.js please help me little more

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-<div id="orange"></div>
+<div id=".state-container"></div>
 <h1>hack</h1>
 <canvas id="myChart" width="800" height="400"></canvas>
 
@@ -13,6 +13,8 @@
 <script type="text/javascript" src="jquery-2.1.0.js"></script>
 <script type="text/javascript" src="Chart.js"></script>
 <script type="text/javascript" src="main.js"></script>
+
+
 
 
 </body>
