--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+<p>
+<span id="fname"></span><br> 
+
+</p> 
 <div id=".state-container"></div>
 <h1>hack</h1>
 <canvas id="myChart" width="800" height="400"></canvas>
