--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </p> 
 <div id=".state-container"></div>
-<h1>hack</h1>
+<h1>Graph sketching</h1>
 <canvas id="myChart" width="800" height="400"></canvas>
 
 
