little more modifications done

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
+<style>
+#alok
+{
+text-align:right;
+}
+h1
+{text-align:left;}
+#a1
+{
+text-align:center;
+}
+
+</style>
 </head>
 <body>
 <p>
